--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "author": "Xander Castillo",
   "dependencies": {
-    "discord.js": "^13.4.0"
+    "discord.js": "^13.4.0",
+    "dotenv": "^10.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.5.0"
   }
 }
