--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Xander Castillo",
   "dependencies": {
     "discord.js": "^13.4.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "node-cron": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^8.5.0"
