--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "discord.js": "^13.4.0",
     "dotenv": "^10.0.0",
-    "node-cron": "^3.0.0"
+    "node-cron": "^3.0.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.13.0"
   },
   "devDependencies": {
     "eslint": "^8.5.0"
