--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node-cron": "^3.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.13.0"
+    "sequelize": "^6.13.0",
+    "sequelize-date-no-tz-postgres": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.5.0"
