--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "author": "Xander Castillo",
   "dependencies": {
+    "@discordjs/rest": "^0.3.0",
+    "discord-api-types": "^0.26.1",
     "discord.js": "^13.4.0",
     "dotenv": "^10.0.0",
     "node-cron": "^3.0.0",
