--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "XandyBot using Node.js",
   "main": "index.js",
   "scripts": {
+    "all-run": "node migration.js && node deployCommands.js && node .",
+    "migrate": "node migration.js",
+    "migrate-run": "node migration.js && node .",
+    "refreshcommands": "node deployCommands.js",
+    "refreshcommands-run": "node deployCommands.js && node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Xander Castillo",
@@ -16,7 +21,8 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.13.0",
-    "sequelize-date-no-tz-postgres": "^1.0.0"
+    "sequelize-date-no-tz-postgres": "^1.0.0",
+    "umzug": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^8.5.0"
