--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xandybot",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "XandyBot using Node.js",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "author": "Xander Castillo",
   "dependencies": {
     "@discordjs/rest": "^0.3.0",
+    "axios": "^0.26.1",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.4.0",
     "dotenv": "^10.0.0",
