--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
   "name": "xandybot",
-  "version": "3.0.0",
+  "version": "2.3.0",
   "description": "XandyBot using Node.js",
   "main": "index.js",
   "scripts": {
-    "all-run": "node deployCommands.js && node .",
+    "all-run": "node migration.js && node deployCommands.js && node .",
+    "migrate": "node migration.js",
+    "migrate-run": "node migration.js && node .",
     "refreshcommands": "node deployCommands.js",
+    "refreshcommands-run": "node deployCommands.js && node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Xander Castillo",
   "dependencies": {
+    "@discord-player/extractor": "^4.0.0",
+    "@discordjs/opus": "^0.8.0",
     "axios": "^0.26.1",
+    "discord-player": "^5.4.1-dev.0",
     "discord.js": "^14.7.1",
     "dotenv": "^10.0.0",
-    "node-cron": "^3.0.0"
+    "ffmpeg-static": "^5.1.0",
+    "node-cron": "^3.0.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "prism-media": "^1.3.4",
+    "sequelize": "^6.13.0",
+    "sequelize-date-no-tz-postgres": "^1.0.0",
+    "umzug": "^3.0.0",
+    "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
     "eslint": "^8.5.0"
