--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "prism-media": "^1.3.4",
     "sequelize": "^6.13.0",
     "sequelize-date-no-tz-postgres": "^1.0.0",
-    "umzug": "^3.0.0",
-    "ytdl-core": "^4.11.2"
+    "umzug": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^8.5.0"
