--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 
 # node_modules
 node_modules
+
+# not showing any changes in the unreleased and released quotes JSON files
+# this is not to affect testing in local environment
+data/unreleasedQuotes.json
